trunk/Archive/270fce388346c340feba0ba94fee2013-8a676986784bd3a58ce3ec015645a41f/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int foo()':
main.cpp:2:5: error: return-statement with no value, in function returning 'int' [-fpermissive]
     return;    
     ^
